src/tess/tl/test/fail/test_tagged_union_name_shadows_builtin.tl
#module main

String: | Foo
        | Bar

main() { 0 }
